istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: zabbix-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 10051
        name: tcp-zabbix
        protocol: TCP
      hosts:
        - zabbix.example.com
