istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zabbix-virtualservice
spec:
  hosts:
    - zabbix.example.com
  gateways:
    - zabbix-gateway
  http:
    - route:
        - destination:
            host: zabbix-web
            port:
              number: 80
